# apidoc

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yaml
sphinxcontrib/: __init__.py
sphinxcontrib/apidoc/: __init__.py  ext.py
sphinxcontrib/apidoc/tests/: conftest.py  test_ext.py
sphinxcontrib/apidoc/tests/roots/test-apidoc/: conf.py
sphinxcontrib/apidoc/tests/roots/test-basics/: conf.py
sphinxcontrib/apidoc/tests/roots/test-invalid-directory/: apidoc_dummy_module.py  conf.py
tests/: conftest.py  test_ext.py
tests/roots/test-advanced/: apidoc_dummy_module.py  conf.py  index.rst
tests/roots/test-advanced-negative/: conf.py  index.rst
tests/roots/test-advanced-negative/apidoc_dummy_package/: apidoc_dummy_submodule_b.py
tests/roots/test-advanced/apidoc_dummy_package/: __init__.py  _apidoc_private_dummy_submodule.py  apidoc_dummy_submodule_a.py  apidoc_dummy_submodule_b.py
tests/roots/test-basics/: conf.py
tests/roots/test-invalid-directory/: conf.py
tests/roots/test-missing-configuration/: conf.py
