[metadata]
name = sphinxcontrib-apidoc
summary = A Sphinx extension for running 'sphinx-apidoc' on each build
description_file =
    README.rst
author = Stephen Finucane
author_email = stephen@that.guru
url = https://github.com/sphinx-contrib/apidoc
project_urls =
    Bug Tracker = https://github.com/sphinx-contrib/apidoc/issues
    Source Code = https://github.com/sphinx-contrib/apidoc
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[wheel]
universal = 1

[mypy]
python_version = 2.7
show_column_numbers = True
show_error_context = True
ignore_missing_imports = True
follow_imports = skip
incremental = True
check_untyped_defs = True
warn_unused_ignores = True

[flake8]
show-source = True
