[metadata]
name = sphinxcontrib-apidoc
summary = A Sphinx extension for running 'sphinx-apidoc' on each build
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8
author = Stephen Finucane
author_email = stephen@that.guru
url = https://github.com/sphinx-contrib/apidoc
project_urls =
    Bug Tracker = https://github.com/sphinx-contrib/apidoc/issues
    Source Code = https://github.com/sphinx-contrib/apidoc
license = BSD License
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Utilities
python_requires = >=3.8
keywords = sphinx

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[flake8]
max-line-length = 88
ignore = E203,E501,E741,W503

[mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = skip
incremental = true
check_untyped_defs = true
warn_unused_ignores = true
